# lsdb_macauff

./: .copier-answers.yml  .pre-commit-config.yaml  LICENSE  README.md  lsdb_mc_data.py  pyproject.toml  requirements.txt
.github/workflows/: smoke-test.yml  testing-and-coverage.yml
nb/: convert_catwise.py  import_pipeline.ipynb  lsdb_test_data.ipynb  macauff_association.ipynb  run_macauff_lsdb.ipynb
src/: .pylintrc
src/lsdb_macauff/: all_macauff_attrs.py  macauff_crossmatch.py  macauff_matching.py  macauff_setup.py
src/lsdb_macauff/config/: __init__.py  all_sky_params.py  catalog_all_sky_params.py  loader.py  pixel_params.py
src/lsdb_macauff/import_pipeline/: arguments.py  convert_metadata.py  map_reduce.py  resume_plan.py  run_import.py
tests/: .pylintrc  conftest.py
tests/data/: all_sky_params.yml  catalog_a.csv  catalog_b.csv  counters.csv  gaia_all_sky_params.yml  gaia_params.yaml  gaia_wise_joint_params.yaml  gaiadr3_catwise_matches_0.csv  generate_data.ipynb  wise_all_sky_params.yml  wise_params.yaml
tests/data/catwise_hats_data/: collection.properties  partition_info.csv  properties
tests/data/catwise_test_data/: _common_metadata  _metadata  catalog_info.json  partition_info.csv  provenance_info.json
tests/data/gaia_hats_data/: collection.properties  partition_info.csv  properties
tests/data/gaia_test_data/: _common_metadata  _metadata  catalog_info.json  partition_info.csv  provenance_info.json
tests/data/import_pipeline/: catalog_a_b_matches.csv  (+1 more)
tests/lsdb_macauff/: test_config.py  test_crossmatch.py  test_example_module.py
(+56 files in other folders)
